# quanttide-laboratory-of-devops

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  STATUS.md  TODO.md  default_11835475239906472277_0_60795.profraw  default_11835475239906472277_0_60796.profraw  default_13987658188616500386_0_60795.profraw  default_13987658188616500386_0_60796.profraw  default_16223714952589115827_0_60928.profraw  default_16223714952589115827_0_61029.profraw  default_16223714952589115827_0_61136.profraw  default_16223714952589115827_0_61235.profraw  default_17199110604778960225_0_60795.profraw  default_17270972891354477156_0_60795.profraw  default_17270972891354477156_0_60796.profraw  default_2510720551659088622_0_60949.profraw  default_2510720551659088622_0_61050.profraw  default_2510720551659088622_0_61157.profraw  default_2510720551659088622_0_61256.profraw  default_7007902665706052187_0_60795.profraw  default_7007902665706052187_0_60796.profraw  default_8738137724648994683_0_60795.profraw  default_8738137724648994683_0_60796.profraw  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.quanttide/devops/: contract.yaml
cli/: Cargo.toml
cli/docs/: ROADMAP_test.md
cli/src/: main.rs
data/: scan-snapshot-20260707.json
docs/: README.md  adr.md  architecture.md  bench-coverage.md  bench-coverage.sh  build.md  code.md  contract.md  detect.md  dev.md  devops-plan-skill.md  index.md  modeling.md  overview.md  plan.md  preflight.md  problem.md  provider-profile.md  provider.md  release-status.md  release.md  requirements-fupan.md  test.md  testing.md  user-guide.md
src/: build.rs  code.rs  contract.rs  gix_scan.rs  go.mod  lib.rs  main.rs  plan.rs  preflight.rs  python.rs  release.rs  test.rs  validate.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: integration.rs
web-ui/: index.html
(+45 files in other folders)
