[package]
name = "kse"
version = "2.0.0"
edition = "2021"
description = "qtcloud-devops — 量潮DevOps实验室 CLI"
authors = ["Guo-Zhang <zhangguo@quanttide.com>"]

[lib]
name = "kse_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "qtcloud-devops"
path = "src/main.rs"

[dependencies]
git2 = { version = "0.19", features = ["vendored-libgit2"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
tempfile = "3"
