[package]
name = "qtcloud-devops-code"
version = "0.1.0"
edition = "2021"
description = "量潮DevOps CLI工具 — Release 发布管理"
authors = ["Guo-Zhang <zhangguo@quanttide.com>"]

[[bin]]
name = "qtcloud-devops-code"
path = "src/main.rs"

[lib]
name = "qtcloud_devops_code"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
